[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptrepo"
version = "0.2.1"
description = "Prompt Version Control — production-grade git for LLM prompts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
gemini = ["google-generativeai>=0.7.0"]
ollama = []
tiktoken = ["tiktoken>=0.7.0"]
secrets = ["cryptography>=42.0.0"]
keyring = ["keyring>=24.0.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.7.0",
    "tiktoken>=0.7.0",
    "cryptography>=42.0.0",
    "keyring>=24.0.0",
]

[project.scripts]
promptrepo = "promptrepo.cli.main:main"
promptvc = "promptrepo.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptrepo*"]

